--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="parent-container">
     <div class="stopwatch">
         <div class="time" id="display">00:00:00.00</div>
         <div class="controls">
@@ -14,6 +17,8 @@
             <button id="reset">Reset</button>
         </div>
     </div>
+</div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
